2023-12-15T08:13:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7219563208 # 2175
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-15
* notice: last 14d: unq all: 2 9
* notice: prev accum: outdated-unq outdated-all / unq all: 825 1513 / 830 1521
* notice: next accum: outdated-unq outdated-all / unq all: 825 1513 / 831 1522
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-12-15]

2023-12-15T00:46:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7216418754 # 2174
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-15
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 823 1510 / 830 1520
* notice: next accum: outdated-unq outdated-all / unq all: 825 1513 / 830 1521
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-11-30] / [2023-12-14]

2023-12-14T08:12:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7206137858 # 2172
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-14
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 823 1510 / 829 1519
* notice: next accum: outdated-unq outdated-all / unq all: 823 1510 / 830 1520
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-11-30 2023-12-14]

2023-12-14T00:45:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7202932866 # 2171