@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-12-15T08:13:11Z",
+  "timestamp" : "2023-12-16T00:45:11Z",
   "count_outdated" : 1513,
   "uniques_outdated" : 825,
-  "count" : 1522,
+  "count" : 1523,
   "uniques" : 831,
   "clones" : [
     {
@@ -52,9 +52,9 @@
     },
     {
       "timestamp": "2023-12-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
